[gd_scene load_steps=13 format=3 uid="uid://hgsbqqn6aaj1"]

[ext_resource type="Script" path="res://ground.gd" id="1_7l2c1"]
[ext_resource type="Script" path="res://player.gd" id="2_d6scy"]
[ext_resource type="Texture2D" uid="uid://btrvbt32lmsyu" path="res://ship.png" id="3_5kjen"]
[ext_resource type="Texture2D" uid="uid://dcvxmbun66n7y" path="res://icon.svg" id="4_uy7uw"]
[ext_resource type="Texture2D" uid="uid://d35nxb1uoa4xk" path="res://assets/lifebar_bg.png" id="6_nge4d"]
[ext_resource type="Texture2D" uid="uid://cyfof28amltdr" path="res://assets/lifebar_fill.png" id="7_0t158"]
[ext_resource type="Script" path="res://healthbar.gd" id="8_375en"]
[ext_resource type="Script" path="res://mobspawner.gd" id="12_5irga"]
[ext_resource type="Script" path="res://from_left_timer.gd" id="13_82f0t"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rjbw0"]
radius = 16.84
height = 78.42

[sub_resource type="Curve2D" id="Curve2D_hgk37"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -46, 1, 0, 0, 0, 0, 353, -75, 0, 0, 0, 0, 798, 236, 0, 0, 0, 0, 145, 37, 0, 0, 0, 0, 76, 30, 0, 0, 0, 0, 43, 77, 0, 0, 0, 0, -15, 87, 0, 0, 0, 0, -55, 0)
}
point_count = 8

[sub_resource type="SegmentShape2D" id="SegmentShape2D_m3q08"]
b = Vector2(39.92, 18.625)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_7l2c1")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
unique_name_in_owner = true
position = Vector2(336, -411)
motion_mode = 1
script = ExtResource("2_d6scy")

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]
position = Vector2(316, 42)
offset = Vector2(-124.095, 0)
zoom = Vector2(0.885, 0.885)

[node name="Control" type="Control" parent="CharacterBody2D/Camera2D"]
layout_mode = 3
anchors_preset = 0
offset_left = -354.0
offset_top = -177.0
offset_right = -314.0
offset_bottom = -137.0

[node name="char_col" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(29.61, 3.85)
rotation = 1.60396
shape = SubResource("CapsuleShape2D_rjbw0")

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
position = Vector2(1, 0)
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_5kjen")

[node name="from_left_path" type="Path2D" parent="CharacterBody2D"]
position = Vector2(-300, -360)
curve = SubResource("Curve2D_hgk37")
script = ExtResource("12_5irga")

[node name="from_left_timer" type="Timer" parent="CharacterBody2D/from_left_path"]
wait_time = 1.351
autostart = true
script = ExtResource("13_82f0t")

[node name="from_left_spawn" type="PathFollow2D" parent="CharacterBody2D/from_left_path"]
position = Vector2(278.533, -60.8158)
rotation = -0.188222
progress = 330.36

[node name="MarginContainer" type="MarginContainer" parent="CharacterBody2D"]
offset_left = 546.0
offset_top = -295.885
offset_right = 942.0
offset_bottom = -242.885
scale = Vector2(0.67737, 0.642932)

[node name="TextureProgressBar" type="TextureProgressBar" parent="CharacterBody2D/MarginContainer"]
layout_mode = 2
value = 100.0
texture_under = ExtResource("6_nge4d")
texture_progress = ExtResource("7_0t158")
script = ExtResource("8_375en")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(2, -603)

[node name="Line2D" type="Line2D" parent="StaticBody2D"]
position = Vector2(9, 574)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("SegmentShape2D_m3q08")

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D/CollisionShape2D"]
visible = false
texture = ExtResource("4_uy7uw")

[connection signal="end_point_of_line" from="." to="CharacterBody2D" method="_on_node_2d_end_point_of_line"]
[connection signal="dead" from="CharacterBody2D" to="." method="_on_character_body_2d_dead"]
[connection signal="end_of_the_line" from="CharacterBody2D" to="." method="_on_character_body_2d_end_of_the_line"]
[connection signal="timeout" from="CharacterBody2D/from_left_path/from_left_timer" to="." method="_on_from_left_timer_timeout"]
[connection signal="timeout" from="CharacterBody2D/from_left_path/from_left_timer" to="CharacterBody2D/from_left_path" method="_on_from_left_timer_timeout"]
